<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/selectedAnimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/permanent_marker"
        android:text="@string/attack_on_titan"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="300dp"
        android:layout_height="280dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/logo_for_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/decideButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="#164BE8"
        android:backgroundTint="#4572FA"
        android:fontFamily="@font/permanent_marker"
        android:text="@string/decide_button"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/addAnimeTextBox"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/permanent_marker"
        android:hint="@string/add_new_anime"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#000000"
        android:textColorHint="#616161"
        app:layout_constraintBottom_toTopOf="@+id/addAnimeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/removeAnimeButton"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/addAnimeButton"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/permanent_marker"
        android:text="@string/add_anime"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/decideButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/removeAnimeButton"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/permanent_marker"
        android:text="@string/remove_anime"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:iconPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectedAnimeText" />

    <TextView
        android:id="@+id/appDescription"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/permanent_marker"
        android:text="@string/welcome_to_the_anime_decider_app"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/addAnimeTextBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/removeAnimeButton" />

</androidx.constraintlayout.widget.ConstraintLayout>